# lecun1989-cpp

./: .ggg  .gitignore  README.ja.md  README.md
cpp/: CMakeLists.txt  README.ja.md  README.md  get_mnist.ps1  lecun1989.cpp  lecun_net.h  predict.cpp  stb_impl.cpp
